@@ -2,10 +2,12 @@ package com.example.wallet.service;
 
 import com.example.wallet.features.EmailFeature;
 import com.example.wallet.features.JwtFeature;
+import com.example.wallet.mapper.UserMapper;
 import com.example.wallet.model.Transaction;
 import com.example.wallet.model.dto.*;
 import com.example.wallet.repo.TransactionDataRepo;
 import com.example.wallet.repo.UserRepo;
+import org.mapstruct.factory.Mappers;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -15,17 +17,17 @@ import java.util.*;
 
 @Service
 public class WalletService {
-    private final UserRepo userRepo;
-    private final TransactionDataRepo transactionDataRepo;
-    private final EmailFeature emailFeature;
-    private final JwtFeature jwtFeature;
     @Autowired
-    public WalletService(UserRepo userRepo, TransactionDataRepo transactionDataRepo, EmailFeature emailFeature, JwtFeature jwtFeature){
-        this.userRepo = userRepo;
-        this.transactionDataRepo = transactionDataRepo;
-        this.emailFeature = emailFeature;
-        this.jwtFeature = jwtFeature;
-    }
+    private UserRepo userRepo;
+    @Autowired
+    private TransactionDataRepo transactionDataRepo;
+    @Autowired
+    private EmailFeature emailFeature;
+    @Autowired
+    private JwtFeature jwtFeature;
+
+    private static final UserMapper USER_INFO_INSTANCE =
+            Mappers.getMapper(UserMapper.class);
     User user = new User();
     TransactionData transactionData = new TransactionData();
 
@@ -36,21 +38,26 @@ public class WalletService {
         }
 
         String encryptedPassword = new BCryptPasswordEncoder().encode(userReq.getPassword());
-
+        User user1 = User.builder()
+                .id(UUID.randomUUID().toString())
+                .username(userReq.getUsername())
+                .email(userReq.getEmail())
+                        .password(encryptedPassword)
+                                .walletBalance(userReq.getWalletBalance()).build();
         user.setId(UUID.randomUUID().toString());
         user.setUsername(userReq.getUsername());
         user.setEmail(userReq.getEmail());
         user.setPassword(encryptedPassword);
         user.setWalletBalance(userReq.getWalletBalance());
 
-        userRepo.save(user);
-
+        userRepo.save(USER_INFO_INSTANCE.dtoToModel(user));
+//            userRepo.save(user);
         transactionData.setTransaction(new ArrayList<>());
         transactionData.setUserId(user.getId());
 
         transactionDataRepo.save(transactionData);
 
-        emailFeature.sendEmail(user.getEmail());
+        emailFeature.sendEmail(userReq.getEmail());
 
         return new ApiResponse(HttpStatus.OK,"User created successfully");
     }
@@ -93,10 +100,6 @@ public class WalletService {
 
     public ApiResponse recharge(RechargeReq rechargeReq,String authHeader)
     {
-        if (!authHeader.startsWith("Bearer "))
-        {
-            return new ApiResponse(HttpStatus.BAD_REQUEST, "Unauthorized");
-        }
 
         String username = jwtFeature.extractUsername(authHeader.substring(7));
 
@@ -127,10 +130,10 @@ public class WalletService {
             userTransactions.add(transactionData);
         }
 
-        Transaction recharge = new Transaction(UUID.randomUUID().toString(),"Recharge", rechargeReq.getAmount(), rechargeReq.getEmail(), new Date());
-        Transaction cashback = new Transaction(UUID.randomUUID().toString(), "Cashback", rechargeReq.getAmount() * 0.01, rechargeReq.getEmail(), new Date());
+        Transaction recharge = new Transaction(UUID.randomUUID().toString(),"Recharge", rechargeReq.getAmount(), rechargeReq.getEmail(),null, new Date());
+        Transaction cashback = new Transaction(UUID.randomUUID().toString(), "Cashback", rechargeReq.getAmount() * 0.01, rechargeReq.getEmail(), null,new Date());
 
-        TransactionData temp = userTransactions.getFirst();
+        TransactionData temp = userTransactions.get(0);
 
         List<Transaction> transactions = temp.getTransaction();
         transactions.add(recharge);
@@ -138,16 +141,13 @@ public class WalletService {
         temp.setTransaction(transactions);
 
         transactionDataRepo.save(temp);
-        userRepo.save(user);
+        userRepo.save(USER_INFO_INSTANCE.dtoToModel(user));
+//        userRepo.save(user);
 
         return new ApiResponse(HttpStatus.OK, "Wallet recharged successfully with cashback");
     }
 
     public ApiResponse transfer(TransferReq transferReq, String authHeader) {
-
-        if (!authHeader.startsWith("Bearer ")) {
-            return new ApiResponse(HttpStatus.BAD_REQUEST, "Unauthorized");
-        }
 
         String token = authHeader.substring(7);
         String username = jwtFeature.extractUsername(token);
@@ -175,13 +175,14 @@ public class WalletService {
             return new ApiResponse(HttpStatus.BAD_REQUEST, "Insufficient balance");
         }
 
-        Transaction fromUserTransaction = new Transaction(UUID.randomUUID().toString(), "Transfer", -transferReq.getAmount(), toUser.getEmail(), new Date());
-        Transaction toUserTransaction = new Transaction(UUID.randomUUID().toString(), "Transfer", transferReq.getAmount(), fromUser.getEmail(), new Date());
+        Transaction fromUserTransaction = new Transaction(UUID.randomUUID().toString(), "Debited", -transferReq.getAmount(), toUser.getEmail(),fromUser.getEmail(), new Date());
+        Transaction toUserTransaction = new Transaction(UUID.randomUUID().toString(), "Credited", transferReq.getAmount(), fromUser.getEmail(),toUser.getEmail(), new Date());
 
         TransactionData fromUserTransactionList = transactionDataRepo.findByUserId(fromUser.getId()).stream().findFirst().orElse(null);
         if (fromUserTransactionList == null) {
             fromUserTransactionList = new TransactionData();
             fromUserTransactionList.setUserId(fromUser.getId());
+
             fromUserTransactionList.setTransaction(new ArrayList<>());
         }
         fromUserTransactionList.getTransaction().add(fromUserTransaction);
@@ -198,8 +199,11 @@ public class WalletService {
 
         optionalFromUser.get().setWalletBalance(fromUser.getWalletBalance() - transferReq.getAmount());
         optionalToUser.get().setWalletBalance(toUser.getWalletBalance() + transferReq.getAmount());
-        userRepo.save(optionalFromUser.get());
-        userRepo.save(optionalToUser.get());
+
+        userRepo.save(USER_INFO_INSTANCE.dtoToModel(optionalFromUser.get()));
+        userRepo.save(USER_INFO_INSTANCE.dtoToModel(optionalToUser.get()));
+//        userRepo.save(optionalFromUser.get());
+//        userRepo.save(optionalToUser.get());
 
         return new ApiResponse(HttpStatus.OK, "Transfer successful");
     }
